# researcher_agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
api/: __init__.py  database.py  fetch_agent.py  index.py  main_agent.py  review_agent.py  schemas.py  writer_agent.py
public/: app.js  index.html  styles.css
